# Mini-Pro

./: .gitignore  Container_logs  Dockerfile  Jenkinsfile  PakSciCal.spec  README.md  Sci-Cal.py  SciCal.py  TestSciCal.py  hosts  playbook.yml  pyproject.toml  requirements.txt  tox.ini
