[tool.poetry]
name = "PakSciCalcu"
version = "0.1.0"
description = "Simple Scintific Calculator"
authors = ["Sankalp Bhardwaj"]

[tool.poetry.dependencies]
python = "^3.11"
tox = "^4.4.7"
pyinstaller = "^5.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
